# map-data-tools

./: .gitignore  LICENSE  README.md
.github/workflows/: python-utilities-ci.yml
adr/: ADR-001 CRS.md  ADR-002 Raster Tiling.md  ADR-003 Raster Image Tile Encoding.md  ADR-004 Language Choices.md  ADR-005 Zooming.md  ADR-006 Data Processing Resp.md  ADR-007 FAA Chart Organization.md  ADR-008 Python Tooling.md  ADR-009 Cloud Processing.md
faa-tools/dof2geojson/: .gitignore  README.md  SPECIFICATION.md  pyproject.toml
faa-tools/dof2geojson/src/dof2geojson/: __init__.py  __main__.py  cli.py  dof.py  parse_dof.py
faa-tools/dof2geojson/tests/: conftest.py  test_cli.py  test_parse_dof.py
faa-tools/dof2geojson/tests/fixtures/digital_obstacle_file_sample/: README.md  sample_manifest.json
faa-tools/faa-raster-chart-preprocess/: README.md  process_sectionals.py  pyproject.toml
faa-tools/faa-raster-chart-preprocess/_process_sectionals/: __init__.py  cli.py  constants.py  coverage.py  discovery.py  models.py  mosaic.py  naming.py  pipeline.py
faa-tools/faa-raster-chart-preprocess/src/faa_raster_chart_preprocess/: __init__.py  cli.py
faa-tools/faa-raster-chart-preprocess/tests/: test_process_sectionals.py
faa-tools/faa-static-data/: README.md  convert_faa_sectional_coverage.py
faa-tools/faa-static-data/tests/: test_convert_faa_sectional_coverage.py
faa-tools/faa-vfr-fetch/: README.md  SPECIFICATION.md  pyproject.toml
faa-tools/faa-vfr-fetch/src/faa_vfr_fetch/: __init__.py  __main__.py  cli.py  fetch_vfr.py
faa-tools/faa-vfr-fetch/tests/: test_cli.py  test_fetch_vfr.py
faa-tools/nasr-aixm2geojson/: README.md  pyproject.toml
faa-tools/nasr-aixm2geojson/src/nasr_aixm2geojson/: __init__.py  __main__.py  aixm.py  cli.py  navaid.py  parse_navaids.py
faa-tools/nasr-aixm2geojson/tests/: conftest.py  test_aixm.py  test_cli.py  test_geojson.py  test_navaid.py  xml_builders.py
faa-tools/tac-static-data/: README.md  TODO.md  generate_tac_mask_debug.py
general-tools/: third-party-tools.lock.json
general-tools/dem-2-slope/: README.md  pyproject.toml
general-tools/dem-2-slope/src/dem_2_slope/: cli.py  download.py  mosaic.py  slope.py
general-tools/dem-2-slope/tests/: test_cli.py  test_mosaic.py  test_slope.py
general-tools/raster-tilemaker/: .dockerignore  AGENTS.md  Dockerfile  README.md  SPECIFICATION.md  poetry.toml  pyproject.toml
general-tools/raster-tilemaker/scripts/: accum_bench.py  mem_profile.py
general-tools/raster-tilemaker/src/raster_tilemaker/: __init__.py  __main__.py  build_tiles.py  cli.py  config.py  grid.py  logging_config.py  pipeline.py  tile_config.py  tiler.py
general-tools/raster-tilemaker/src/raster_tilemaker/coverage/: __init__.py  common.py  sectional.py  tac.py
general-tools/raster-tilemaker/src/raster_tilemaker/geo/: __init__.py  bounds.py
general-tools/raster-tilemaker/src/raster_tilemaker/metadata/: __init__.py  geotiff.py  sidecar.py
general-tools/raster-tilemaker/src/raster_tilemaker/output/: __init__.py  pmtiles.py
general-tools/raster-tilemaker/src/raster_tilemaker/render/: __init__.py  mosaic.py  palette.py
general-tools/raster-tilemaker/tests/: test_build_tiles_cli.py  test_la_fidelity.py  test_logging_config.py  test_pmtiles_header.py  test_pmtiles_output.py  test_vrt_output.py
general-tools/raster-tilemaker/tests/fixtures/e2e/output/: README.md  tile_config.json
general-tools/raster-tilemaker/tests/fixtures/e2e/source/: README.md  Synthetic_Chart_A.htm  Synthetic_Chart_A.tif  Synthetic_Chart_B.htm  Synthetic_Chart_B.tif
general-tools/scripts/: setup_third_party_tools.py
general-tools/sentinel-mosaic/: .dockerignore  Dockerfile  README.md  poetry.toml  pyproject.toml
general-tools/sentinel-mosaic/src/sentinel_mosaic/: __init__.py  cli.py  composite.py  logging_setup.py  process.py  search.py
general-tools/sentinel-mosaic/tests/: test_cli.py  test_composite.py  test_logging_setup.py  test_process.py  test_search.py
general-tools/vector-tilemaker/: README.md
shared-configuration/: README.md  faa-chart-flyer-region-mapping.json  faa-sectional-coverage.txt
shared-configuration/mountain-regions-masks/: mountainous-regions.geojson  salt-lake-mountain-region.geojson
shared-configuration/sectional-chart-masks/: albuquerque.geojson  anchorage.geojson  atlanta.geojson  bethel.geojson  billings.geojson  brownsville.geojson  cape-lisburne.geojson  charlotte.geojson  cheyenne.geojson  chicago.geojson  cincinnati.geojson  cold-bay.geojson  dallas-ft-worth.geojson  dawson.geojson  denver.geojson  detroit.geojson  dutch-harbor.geojson  el-paso.geojson  fairbanks.geojson  great-falls.geojson  green-bay.geojson  halifax.geojson  hawaiian-inset.geojson  hawaiian-islands.geojson  houston.geojson  jacksonville.geojson  juneau.geojson  kansas-city.geojson  ketchikan.geojson  klamath-falls.geojson  kodiak.geojson  lake-huron.geojson  las-vegas.geojson  los-angeles.geojson  mariana-islands-inset.geojson  mcgrath.geojson  memphis.geojson  miami.geojson  montreal.geojson  new-orleans.geojson  (+17 more)
shared-configuration/terminal-area-fly-chart-masks/: Colorado_Springs_TAC.geojson  Denver_TAC.geojson  Las_Vegas_TAC.geojson  Salt_Lake_City_TAC.geojson  anchorage_tac.geojson  atlanta_tac.geojson  baltimore-washington_tac.geojson  boston_tac.geojson  charlotte_tac.geojson  chicago_tac.geojson  cincinnati_tac.geojson  cleveland_tac.geojson  dallas-ft_worth_tac.geojson  detroit_tac.geojson  fairbanks_tac.geojson  houston_tac.geojson  kansas_city_tac.geojson  los_angeles_tac.geojson  memphis_tac.geojson  miami_tac.geojson  minneapolis-st_paul_tac.geojson  new_orleans_tac.geojson  new_york_tac.geojson  orlando_tac.geojson  philadelphia_tac.geojson  phoenix_tac.geojson  pittsburgh_tac.geojson  portland_tac.geojson  puerto_rico-vi_tac.geojson  san_diego_tac.geojson  san_francisco_tac.geojson  seattle_tac.geojson  st_louis_tac.geojson  tampa_tac.geojson
tilemaker-shared/: README.md  pyproject.toml
tilemaker-shared/src/tilemaker_shared/: geojson.py
tilemaker-shared/tests/: test_geojson.py
tmp-processing-folders/: .gitignore
(+9 files in other folders)
