[project]
name = "raster-tilemaker"
version = "0.1.0"
description = "Map tiling pipeline"
readme = "README.md"
authors = [
    {name = "Michael Hughes", email = "<work@mihughes.com>"},
]
requires-python = ">=3.12,<3.15"
dependencies = ["numpy>=2.0", "pillow>=12.0.0", "gdal==3.12.4"]

[project.scripts]
raster-tilemaker = "raster_tilemaker.cli:main"

[tool.poetry]
packages = [{ include = "raster_tilemaker", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
