[project]
name = "sentinel-mosaic"
version = "0.1.0"
description = "Build true-color COG mosaics from CDSE Sentinel-2 quarterly global mosaics for raster-tilemaker"
readme = "README.md"
authors = [
    { name = "Michael Hughes", email = "<work@mihughes.com>" },
]
requires-python = ">=3.12,<3.15"
dependencies = ["numpy>=2.0", "pystac-client>=0.8", "requests>=2.31", "gdal>=3.12.3"]

[project.scripts]
sentinel-mosaic = "sentinel_mosaic.cli:cli"

[tool.poetry]
packages = [{ include = "sentinel_mosaic", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
ruff = "^0.15.0"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
